<?xml version="1.0" encoding="utf-8"?>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="horizontal"
        android:columnCount="3"
        android:padding="@dimen/layout_margin"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/list_cell_time"
        android:text="@string/time"
        android:layout_column="0"
        android:layout_columnWeight="0.2" />
    <TextView
        android:id="@+id/list_cell_client"
        android:layout_column="1"
        android:layout_columnWeight="0.5"
        android:text="@string/client"
        />
    <TextView
        android:id="@+id/list_cell_price"
        android:text="@string/price"
        android:layout_column="2"
        android:layout_columnWeight="0.3"

        />
</GridLayout>