<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:id="@+id/visit_list_cell_layout"
        android:layout_marginTop="4dp"
        android:elevation="4dp"
        android:background="@color/caldroid_white"
        >
        <TextView
            android:id="@+id/list_cell_time"
            android:text="@string/time"
            android:textColor="@color/accent"
            android:layout_width="@dimen/time_cell_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:height="30sp"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
            android:id="@+id/list_cell_client"
            android:layout_width="wrap_content"
            android:text="@string/client"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
            android:id="@+id/list_cell_note"
            android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
            android:text="@string/note"
            android:textColor="@color/secondary_text"
                android:gravity="center_vertical"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">


    <TextView
        android:id="@+id/list_cell_price"
        android:text="@string/price"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/text_padding"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"


        />
    <CheckBox
        android:id="@+id/notification_flag"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:button="@drawable/checkbox_selector"
        android:gravity="center"
        />
    </LinearLayout>
</LinearLayout>