<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_dbrecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.myapplication.ActivityDBRecord"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            android:background="@color/primary_light"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/left_arrow"
                android:onClick="onDecrDate"
                android:gravity="center"
                />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/date"
                android:text="date"
                android:gravity="center"
                android:cursorVisible="false"
                android:backgroundTint="@android:color/transparent"
                >
            </EditText>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/right_arrow"
                android:onClick="onIncrDate"
                android:gravity="center"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/time"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/time"
            android:onClick="showTimePickerDialog"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
       >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/client"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/client"
            />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/note" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/note"/>
        </LinearLayout>

    <LinearLayout

        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            />
        <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/price"/>
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_margin="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/button_back"
                android:onClick="onBack"
                android:layout_gravity="bottom"
                />
            <Button
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/button_save"
                android:onClick="onSave"
                android:layout_gravity="bottom"
                 />
            <Button
                android:layout_margin="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:id="@+id/button_del"
                android:onClick="onDel"
                android:layout_gravity="bottom"/>
        </LinearLayout>

    </LinearLayout>

