<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_visit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.ActivityVisit">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            android:background="@color/primary_light"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/left_arrow"
                android:onClick="onDecrDate"
                android:gravity="center"
                />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/date"
                android:text="date"
                android:gravity="center"
                android:cursorVisible="false"
                android:backgroundTint="@android:color/transparent"
                >
            </EditText>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/right_arrow"
                android:onClick="onIncrDate"
                android:gravity="center"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/time"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/time"
            android:onClick="showTimePickerDialog"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
       >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/client"
            />
        <AutoCompleteTextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/client"
            />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/note" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/note"/>
        </LinearLayout>

    <LinearLayout

        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            />
        <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/price"/>
    </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_done"
        android:tint="@color/icons"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        android:onClick="onSave"/>

</FrameLayout>

